# rust-hsp3-plugin

./: .gitignore  Cargo.toml  README.md
example/: main.hsp
hsp3sdk/: Cargo.toml
hsp3sdk/src/: hsp3plugin.rs  hsp3struct.rs  hspvar_core.rs  hspwnd.rs  lib.rs  mod.rs
src/: lib.rs
